Start working on cmd running setup

--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,5 @@
 (library
  (name btrshotter)
  (libraries core async)
- (preprocess (pps ppx_jane)))
+ (preprocess (pps ppx_jane))
+ (inline_tests))
