--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: c
 before_install:
 - sudo apt-get update
 - sudo apt-get -y install opam
+- opam init
 
 install:
 - opam install -y opam core async ppx_jane
