--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 before_install:
 - sudo apt-get update
 - sudo apt-get -y install opam
-- opam init --compiler=ocaml-base-compiler
+- opam init --compiler=ocaml-base-compiler.4.11.1
 
 install:
 - opam install -y opam core async ppx_jane
