use recent distribution

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ dist: focal
 before_install:
 - sudo apt-get update
 - sudo apt-get -y install opam
-- opam init --compiler=ocaml-base-compiler.4.11.1
+- opam init --auto-setup
+- eval $(opam env)
 
 install:
 - opam install -y opam core async ppx_jane
